--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -23,7 +23,7 @@
 			@green 
 		); 
 		.callout--border--left;
-        .callout--icon("\f058",@green);
+        .callout--icon("\f00c",@green);
 	}
 
 	// Red
@@ -33,7 +33,7 @@
 			@red 
 		); 
 		.callout--border--left;
-        .callout--icon("\f06a",@red);
+        .callout--icon("\f071",@red);
 	}
 
 	// Yellow
@@ -42,6 +42,7 @@
 			@yellow-light 
 		); 
 		.callout--border--left;
+        .callout--icon("\f06a",@yellow);
 	}
 
 	// Gray
