--- a/public/css/print.css
+++ b/public/css/print.css
@@ -2412,15 +2412,15 @@ hr {
 .callout--confirmation .callout__link--anchor:after {
   content: "\f063";
 }
-.callout--confirmation > :first-child {
+.callout--confirmation.callout--icon > :first-child {
   position: relative;
   padding-right: 3em;
 }
-.callout--confirmation > :first-child:after {
+.callout--confirmation.callout--icon > :first-child:after {
   font-family: 'FontAwesome';
   font-size: 2rem;
   font-weight: 300;
-  content: "\f058";
+  content: "\f00c";
   color: #537D2D;
   line-height: 1em;
   width: 1em;
@@ -2503,15 +2503,15 @@ hr {
 .callout--warning .callout__link--anchor:after {
   content: "\f063";
 }
-.callout--warning > :first-child {
+.callout--warning.callout--icon > :first-child {
   position: relative;
   padding-right: 3em;
 }
-.callout--warning > :first-child:after {
+.callout--warning.callout--icon > :first-child:after {
   font-family: 'FontAwesome';
   font-size: 2rem;
   font-weight: 300;
-  content: "\f06a";
+  content: "\f071";
   color: #DF3034;
   line-height: 1em;
   width: 1em;
@@ -2593,6 +2593,25 @@ hr {
 }
 .callout--alert .callout__link--anchor:after {
   content: "\f063";
+}
+.callout--alert.callout--icon > :first-child {
+  position: relative;
+  padding-right: 3em;
+}
+.callout--alert.callout--icon > :first-child:after {
+  font-family: 'FontAwesome';
+  font-size: 2rem;
+  font-weight: 300;
+  content: "\f06a";
+  color: #FFBF47;
+  line-height: 1em;
+  width: 1em;
+  height: 1em;
+  text-align: center;
+  border-radius: 50%;
+  position: absolute;
+  right: -0.3rem;
+  top: -0.08rem;
 }
 .callout--quote {
   padding: 0.75rem 1rem 0.75rem 1rem;
