--- a/public/css/print.css
+++ b/public/css/print.css
@@ -2264,7 +2264,9 @@ hr {
  * .callout( @callout-background, @callout-headings, @callout-text, @callout-border )
  * Whole callouts can be automatically calculated by entering only one colour.
  */
-.callout {
+.callout,
+.dap-panel .dap-panel--base,
+.highlight {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #caeaff;
@@ -2431,7 +2433,9 @@ hr {
   right: -0.3rem;
   top: -0.08rem;
 }
-.callout--warning {
+.callout--warning,
+.dap-panel--crucial,
+.highlight--error {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #f2acad;
@@ -2503,11 +2507,11 @@ hr {
 .callout--warning .callout__link--anchor:after {
   content: "\f063";
 }
-.callout--warning.callout--icon > :first-child {
+.callout--warning > :first-child {
   position: relative;
   padding-right: 3em;
 }
-.callout--warning.callout--icon > :first-child:after {
+.callout--warning > :first-child:after {
   font-family: 'FontAwesome';
   font-size: 2rem;
   font-weight: 300;
@@ -2522,7 +2526,10 @@ hr {
   right: -0.3rem;
   top: -0.08rem;
 }
-.callout--alert {
+.callout--alert,
+.dap-panel--important,
+.dap-panel--adviser,
+.highlight--warning {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #ffebc6;
@@ -2613,7 +2620,8 @@ hr {
   right: -0.3rem;
   top: -0.08rem;
 }
-.callout--quote {
+.callout--quote,
+.dap-panel--example {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #FFF;
@@ -3044,7 +3052,8 @@ hr {
 .callout--generous .callout__link--anchor:after {
   content: "\f063";
 }
-.callout--related {
+.callout--related,
+.dap-panel--progress {
   padding: 0.75rem 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #f2f2f2;
@@ -3193,700 +3202,6 @@ hr {
  *
  * Replacing old callout styles with new mixin.
  */
-.highlight {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #b1dcff;
-  color: #191926;
-  border: 0px #004B88 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.highlight > h1,
-.highlight > h2,
-.highlight > h3 {
-  color: #191926;
-  font-size: 1.3rem;
-}
-.highlight a {
-  border-bottom-color: #004B88;
-}
-.highlight > *:first-child {
-  padding-top: 0;
-}
-.highlight h1:first-child,
-.highlight h2:first-child,
-.highlight h3:first-child,
-.highlight h4:first-child,
-.highlight h5:first-child,
-.highlight h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.highlight li:first-child {
-  padding-top: 0;
-}
-.highlight > *:last-child {
-  margin-bottom: 0;
-}
-.highlight .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #97b7ff;
-  color: #191926;
-  border-bottom: 1px solid #004B88;
-  text-decoration: none;
-  position: relative;
-}
-.highlight .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #7ea5ff;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.highlight .callout__link:hover {
-  background-color: #7ea5ff;
-  color: #191926;
-}
-.highlight .callout__link:hover:after {
-  background-color: #4b81ff;
-}
-.highlight .callout__link--anchor:after {
-  content: "\f063";
-}
-.highlight--warning {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #fffbf9;
-  color: #191926;
-  border: 0px #F47738 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.highlight--warning > h1,
-.highlight--warning > h2,
-.highlight--warning > h3 {
-  color: #191926;
-  font-size: 1.3rem;
-}
-.highlight--warning a {
-  border-bottom-color: #F47738;
-}
-.highlight--warning > *:first-child {
-  padding-top: 0;
-}
-.highlight--warning h1:first-child,
-.highlight--warning h2:first-child,
-.highlight--warning h3:first-child,
-.highlight--warning h4:first-child,
-.highlight--warning h5:first-child,
-.highlight--warning h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.highlight--warning li:first-child {
-  padding-top: 0;
-}
-.highlight--warning > *:last-child {
-  margin-bottom: 0;
-}
-.highlight--warning .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #fdf2e1;
-  color: #191926;
-  border-bottom: 1px solid #F47738;
-  text-decoration: none;
-  position: relative;
-}
-.highlight--warning .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #fce7c9;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.highlight--warning .callout__link:hover {
-  background-color: #fce7c9;
-  color: #191926;
-}
-.highlight--warning .callout__link:hover:after {
-  background-color: #f9d199;
-}
-.highlight--warning .callout__link--anchor:after {
-  content: "\f063";
-}
-.highlight--error {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #ffffff;
-  color: #191926;
-  border: 0px #DF3034 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.highlight--error > h1,
-.highlight--error > h2,
-.highlight--error > h3 {
-  color: #191926;
-  font-size: 1.3rem;
-}
-.highlight--error a {
-  border-bottom-color: #DF3034;
-}
-.highlight--error > *:first-child {
-  padding-top: 0;
-}
-.highlight--error h1:first-child,
-.highlight--error h2:first-child,
-.highlight--error h3:first-child,
-.highlight--error h4:first-child,
-.highlight--error h5:first-child,
-.highlight--error h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.highlight--error li:first-child {
-  padding-top: 0;
-}
-.highlight--error > *:last-child {
-  margin-bottom: 0;
-}
-.highlight--error .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #f2f2f2;
-  color: #191926;
-  border-bottom: 1px solid #DF3034;
-  text-decoration: none;
-  position: relative;
-}
-.highlight--error .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #e6e6e6;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.highlight--error .callout__link:hover {
-  background-color: #e6e6e6;
-  color: #191926;
-}
-.highlight--error .callout__link:hover:after {
-  background-color: #cccccc;
-}
-.highlight--error .callout__link--anchor:after {
-  content: "\f063";
-}
-/* Obsolete
-.sideContent:extend( .box all ) {
-
-    & > h3 {
-        // This should really be a h2
-        margin: 0;
-        font-size: 1.6em;
-    }
-
-    // Extend is broken on media selectors in dotless
-    @media (max-width: @screen-sm-max ) {
-        margin: 0 0 1em 1em;
-    }
-    
-    @media( max-width: @screen-xs-max ) {
-        float: none;
-        clear: none;
-        width: auto;
-        margin: 0;
-    }
-}
-
-// Obsolete
-.inlineContent:extend( .box all ) {
-    
-    overflow: hidden; // Allows the div to wrap around floated divs
-
-    & > h3 {
-        // This should really be a h2
-        margin: 0;
-        font-size: 1.6em;
-    }
-}*/
-/**
- * PANELS
- *
- * These are the functional boxes used for callouts and indicators 
- */
-.dap-panel .dap-panel--base {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #caeaff;
-  color: #191926;
-  border: 0px #4ab7ff solid;
-  display: block;
-  border-width: 1px;
-  border-left-width: 0.5rem;
-}
-.dap-panel .dap-panel--base > h1,
-.dap-panel .dap-panel--base > h2,
-.dap-panel .dap-panel--base > h3 {
-  color: #A5BDDC;
-  font-size: 1.3rem;
-}
-.dap-panel .dap-panel--base a {
-  border-bottom-color: #4ab7ff;
-}
-.dap-panel .dap-panel--base > *:first-child {
-  padding-top: 0;
-}
-.dap-panel .dap-panel--base h1:first-child,
-.dap-panel .dap-panel--base h2:first-child,
-.dap-panel .dap-panel--base h3:first-child,
-.dap-panel .dap-panel--base h4:first-child,
-.dap-panel .dap-panel--base h5:first-child,
-.dap-panel .dap-panel--base h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel .dap-panel--base li:first-child {
-  padding-top: 0;
-}
-.dap-panel .dap-panel--base > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel .dap-panel--base .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #b0ccff;
-  color: #191926;
-  border-bottom: 1px solid #4ab7ff;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel .dap-panel--base .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #97bbff;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel .dap-panel--base .callout__link:hover {
-  background-color: #97bbff;
-  color: #191926;
-}
-.dap-panel .dap-panel--base .callout__link:hover:after {
-  background-color: #649aff;
-}
-.dap-panel .dap-panel--base .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel .dap-panel--base .callout__link:last-child {
-  border: none;
-}
-.dap-panel--crucial {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #f2acad;
-  color: #191926;
-  border: 0px #e13d41 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.dap-panel--crucial > h1,
-.dap-panel--crucial > h2,
-.dap-panel--crucial > h3 {
-  color: #DF3034;
-  font-size: 1.3rem;
-}
-.dap-panel--crucial a {
-  border-bottom-color: #e13d41;
-}
-.dap-panel--crucial > *:first-child {
-  padding-top: 0;
-}
-.dap-panel--crucial h1:first-child,
-.dap-panel--crucial h2:first-child,
-.dap-panel--crucial h3:first-child,
-.dap-panel--crucial h4:first-child,
-.dap-panel--crucial h5:first-child,
-.dap-panel--crucial h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel--crucial li:first-child {
-  padding-top: 0;
-}
-.dap-panel--crucial > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel--crucial .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #efaa96;
-  color: #191926;
-  border-bottom: 1px solid #e13d41;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel--crucial .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #eb9880;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel--crucial .callout__link:hover {
-  background-color: #eb9880;
-  color: #191926;
-}
-.dap-panel--crucial .callout__link:hover:after {
-  background-color: #e47453;
-}
-.dap-panel--crucial .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel--important {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #ffebc6;
-  color: #191926;
-  border: 0px #ffbf47 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.dap-panel--important > h1,
-.dap-panel--important > h2,
-.dap-panel--important > h3 {
-  color: #191926;
-  font-size: 1.3rem;
-}
-.dap-panel--important a {
-  border-bottom-color: #ffbf47;
-}
-.dap-panel--important > *:first-child {
-  padding-top: 0;
-}
-.dap-panel--important h1:first-child,
-.dap-panel--important h2:first-child,
-.dap-panel--important h3:first-child,
-.dap-panel--important h4:first-child,
-.dap-panel--important h5:first-child,
-.dap-panel--important h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel--important li:first-child {
-  padding-top: 0;
-}
-.dap-panel--important > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel--important .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #fff7ad;
-  color: #191926;
-  border-bottom: 1px solid #ffbf47;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel--important .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #fff494;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel--important .callout__link:hover {
-  background-color: #fff494;
-  color: #191926;
-}
-.dap-panel--important .callout__link:hover:after {
-  background-color: #ffef61;
-}
-.dap-panel--important .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel--progress {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #f2f2f2;
-  color: #191926;
-  border: 0px #006278 solid;
-  display: block;
-  border-top-width: 0.5rem;
-}
-.dap-panel--progress > h1,
-.dap-panel--progress > h2,
-.dap-panel--progress > h3 {
-  color: #006278;
-  font-size: 1.3rem;
-}
-.dap-panel--progress a {
-  border-bottom-color: #006278;
-}
-.dap-panel--progress > *:first-child {
-  padding-top: 0;
-}
-.dap-panel--progress h1:first-child,
-.dap-panel--progress h2:first-child,
-.dap-panel--progress h3:first-child,
-.dap-panel--progress h4:first-child,
-.dap-panel--progress h5:first-child,
-.dap-panel--progress h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel--progress li:first-child {
-  padding-top: 0;
-}
-.dap-panel--progress > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel--progress .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #e5e5e5;
-  color: #191926;
-  border-bottom: 1px solid #006278;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel--progress .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #d9d9d9;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel--progress .callout__link:hover {
-  background-color: #d9d9d9;
-  color: #191926;
-}
-.dap-panel--progress .callout__link:hover:after {
-  background-color: #bfbfbf;
-}
-.dap-panel--progress .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel--adviser {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #ffebc6;
-  color: #191926;
-  border: 0px #ffbf47 solid;
-  display: block;
-  border-left-width: 0.5rem;
-}
-.dap-panel--adviser > h1,
-.dap-panel--adviser > h2,
-.dap-panel--adviser > h3 {
-  color: #191926;
-  font-size: 1.3rem;
-}
-.dap-panel--adviser a {
-  border-bottom-color: #ffbf47;
-}
-.dap-panel--adviser > *:first-child {
-  padding-top: 0;
-}
-.dap-panel--adviser h1:first-child,
-.dap-panel--adviser h2:first-child,
-.dap-panel--adviser h3:first-child,
-.dap-panel--adviser h4:first-child,
-.dap-panel--adviser h5:first-child,
-.dap-panel--adviser h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel--adviser li:first-child {
-  padding-top: 0;
-}
-.dap-panel--adviser > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel--adviser .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #fff7ad;
-  color: #191926;
-  border-bottom: 1px solid #ffbf47;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel--adviser .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #fff494;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel--adviser .callout__link:hover {
-  background-color: #fff494;
-  color: #191926;
-}
-.dap-panel--adviser .callout__link:hover:after {
-  background-color: #ffef61;
-}
-.dap-panel--adviser .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel--example {
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #FFF;
-  color: #191926;
-  border: 0px #bfbfbf solid;
-  display: block;
-  border-width: 1px;
-  border-left-width: 0.5rem;
-}
-.dap-panel--example > h1,
-.dap-panel--example > h2,
-.dap-panel--example > h3 {
-  color: #606060;
-  font-size: 1.3rem;
-}
-.dap-panel--example a {
-  border-bottom-color: #bfbfbf;
-}
-.dap-panel--example > *:first-child {
-  padding-top: 0;
-}
-.dap-panel--example h1:first-child,
-.dap-panel--example h2:first-child,
-.dap-panel--example h3:first-child,
-.dap-panel--example h4:first-child,
-.dap-panel--example h5:first-child,
-.dap-panel--example h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-.dap-panel--example li:first-child {
-  padding-top: 0;
-}
-.dap-panel--example > *:last-child {
-  margin-bottom: 0;
-}
-.dap-panel--example .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  border: none;
-  background-color: #f2f2f2;
-  color: #191926;
-  border-bottom: 1px solid #bfbfbf;
-  text-decoration: none;
-  position: relative;
-}
-.dap-panel--example .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #e6e6e6;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.dap-panel--example .callout__link:hover {
-  background-color: #e6e6e6;
-  color: #191926;
-}
-.dap-panel--example .callout__link:hover:after {
-  background-color: #cccccc;
-}
-.dap-panel--example .callout__link--anchor:after {
-  content: "\f063";
-}
-.dap-panel--example .callout__link:last-child {
-  border: none;
-}
 /************************************************************************
  * Side panels - extending to style the panels that will run down the left-hand menu.
  */
